force-app/main/default/objects/OpportunityLineItem/fields/BrandVoice_Program__c.field-meta.xml
<CustomField>
    <fullName>BrandVoice_Program__c</fullName>
    <label>BrandVoice Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not BrandVoice</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Stories</fullName>
            </value>
            <value>
                <fullName>Special Feature</fullName>
            </value>
            <value>
                <fullName>Print BrandVoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>